try fix scrollbar

--- a/frontend/src/pages/Homepage.css
+++ b/frontend/src/pages/Homepage.css
@@ -48,7 +48,7 @@
     grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     gap: 20px;
     max-width: 1920px;
-    width: calc(100% - 40px);
+    width: calc(100vw - 40px * 2);
     margin: 40px;
 }
 
